<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="welcome">Hello &amp; Welcome!</string>
    <string name="app_name">Wirecard EZ-Link</string>
    <string name="cardNo">Card No</string>
    <string name="merchantNo">Merchant No</string>
    <string name="merchantName">Merchant Name</string>
    <string name="orderNo">Order No</string>
    <string name="qrCodeDetails">QR-Code Details</string>
    <string name="paymentDetails">Payment Details</string>
    <string name="paymentSuccessful">Your Payment is Successful</string>
    <string name="paymentAmount">Payment Amount</string>
    <string name="prevBal">Prev Balance</string>
    <string name="currentBal">Current Balance</string>
    <string name="purseBal">Purse Balance</string>
    <string name="merchantRef">Merchant Ref</string>
    <string name="action_settings">Settings</string>
    <string name="qr_code">Scan QR Code</string>
    <string name="nfc">Continue</string>
    <string name="pay">Pay</string>
    <string name="error">"Error: "</string>
    <string name="transaction_unsuccessful">Transaction Unsuccessful</string>
    <string name="no_card_detected">No Card Detected</string>
	<string name="explanation">Demo NFC</string>
    <string name="guide">Tap your ez-link card at the back of your phone</string>
    <string name="guide2">Tap your ez-link card at the back of your phone to get tranx history</string>
     <string name="pay_guide">Keep your ez-link card at the back of your smart phone and press PAY button to procead with the payment</string>
    <string name="nfc_support">This device doesn\'t support NFC</string>
    <string name="nfc_disabled">NFC is not activated.</string>
    <string name="nfc_turn_on">Please turn on NFC.</string>
    <string name="setting">Setting</string>
    <string name="wifi_disabled">Wifi is not activated.</string>
    <string name="wifi_turn_on">Please turn on wifi.</string>
    <string name="error_amount">Cannot payment. The payment amount is greater than the balance</string>
    <string name="error_qr_code">There is error occurs with QR Code.</string>
    <string name="error_detect">Cannot detect Ez-Link card. Please adjust card at the back of your phone.</string>
    <string name="error_invalid_card">Invalid Card. Please put correct card.</string>
    <string name="error_qr_scan">QR code scanning Unsuccessful.</string>
    <string name="back_qr_scan">QR code scanning Unsuccessful.Please press back button to exit</string>
    <string name="confirm_guide">Please press Next button on the payment page in browser to complete the payment</string>
    <string name="qr_guide">Please check your purchase details and press Continue button to procead with payment</string>
	<string name="expiry_date">Expiry Date</string>
	<string name="options">Options</string>
    <string name="sound">Sound</string>
    <string name="sound2">Play Sound on scan succeeded</string>
    <string name="vibrate2">Vibrates on scan succeeded and on item click</string>
    <string name="vibrate">Vibrates</string>
    <string name="start_scan2">Start Application in Scan Mode</string>
    <string name="start_scan">Start in Scan Mode</string>
    <!-- Nav Drawer Menu Items In QRCode Screen -->
    <string-array name="navigation_drawer_qrcode">
        <item>QRCode Detail</item>
        <item>Transaction History</item>
        <item>Terms &amp; Conditions</item>
        <item>Help</item>
    </string-array>
    
    <!-- Nav Drawer Menu Items In Tag Card Screen -->
    <string-array name="navigation_drawer_tagcard">
        <item>Tap Card</item>
        <item>Transaction History</item>
        <item>Terms &amp; Conditions</item>
        <item>Help</item>
    </string-array>

     <!-- Nav Drawer Menu Items In Payment Screen -->
    <string-array name="navigation_drawer_payment">
        <item>Payment</item>
        <item>Transaction History</item>
        <item>Contact</item>
        <item>Terms &amp; Conditions</item>
        <item>Help</item>
    </string-array>

     <!-- Nav Drawer Menu Items In Confirmation Screen -->
    <string-array name="navigation_drawer_confirmation">
        <item>Confirmation</item>
        <item>Transaction History</item>
        <item>Contact</item>
        <item>Terms &amp; Conditions</item>
        <item>Help</item>
    </string-array>
    
    <string-array name="page_title_array">
        <item>Scan</item>
        <item>History</item>
        <item>Upload</item>
    </string-array>
    
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
</resources>
