<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#004E98"
    android:orientation="vertical"
    android:weightSum="10" >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5">
	    <Button
	        android:id="@+id/payButton"
	        android:layout_width="fill_parent"
	        android:layout_height="55dp"
	        android:layout_margin="5dp"
	        android:background="@drawable/nice_button"
	        android:gravity="center"
	        android:shadowColor="@android:color/black"
	        android:shadowDx="1"
	        android:shadowDy="1"
	        android:shadowRadius="5"
	        android:text="@string/pay"
	        android:textColor="@android:color/white"
	        android:textSize="20sp" />
	</LinearLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="bottom|center_horizontal"
        android:text="@string/paymentDetails"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="7dp"
        android:layout_weight="3"
        android:background="@drawable/custom_border"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="10" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:orientation="vertical"
            android:paddingLeft="12dp"
            android:weightSum="5" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/cardNo"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/purseBal"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/paymentAmount"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/merchantName"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/merchantRef"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="6"
            android:orientation="vertical"
            android:weightSum="5" >

            <TextView
                android:id="@+id/cardNo_textView1"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/purseBalance_textView"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/paymentAmt_textView1"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/merchantName_textView1"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/merchantRef_textView"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:layout_margin="7dp" >

        <TextView
            android:id="@+id/error1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:visibility="invisible" >
        </TextView>

        <TextView
            android:id="@+id/error_content1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/red"
            android:textSize="20sp" >
        </TextView>
    </LinearLayout>

    <TextView
        android:id="@+id/guide_textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:text="@string/pay_guide"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="italic" >
    </TextView>

</LinearLayout>