<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#004E98"
    android:orientation="vertical"
    android:weightSum="10" >
    

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:id="@+id/card_info"
        android:layout_marginTop="70dp"
        android:layout_margin="7dp"
        android:background="@drawable/custom_border"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="10" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:orientation="vertical"
            android:paddingLeft="12dp"
            android:weightSum="3" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/cardNo"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/purseBal"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/expiry_date"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="6"
            android:orientation="vertical"
            android:weightSum="3" >

            <TextView
                android:id="@+id/cardNo_textView"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/purseBalance_textView"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/expiryDate_textView"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">
    </LinearLayout>
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="7" >
	    <ListView
	        android:id="@+id/listview"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:divider="#FFCC00"
	        android:dividerHeight="1dp" >
	    </ListView>
		<TextView 
		    android:id="@+id/tranxHistoryError"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerHorizontal="true"
		    android:layout_centerVertical="true"
		    android:gravity="center_horizontal"
		    android:layout_marginTop="20dp"
		    android:textSize="20sp" 
		    android:textColor="@color/red"
		    />
	</RelativeLayout>
</LinearLayout>